@@ -5,13 +5,18 @@
  * @brief Implementation file for CSplitterWndEx
  *
  */
-// RCS ID line follows -- this is updated by CVS
+// ID line follows -- this is updated by SVN
 // $Id$
 //
 //////////////////////////////////////////////////////////////////////
 
 #include "stdafx.h"
 #include "SplitterWndEx.h"
+
+#ifdef COMPILE_MULTIMON_STUBS
+#undef COMPILE_MULTIMON_STUBS
+#endif
+#include <multimon.h>
 
 #ifdef _DEBUG
 #undef THIS_FILE
@@ -37,6 +42,7 @@ CSplitterWndEx::CSplitterWndEx()
 {
 	m_bBarLocked = FALSE;
 	m_bResizePanes = FALSE;
+	m_bAutoResizePanes = FALSE;
 }
 
 CSplitterWndEx::~CSplitterWndEx()
@@ -159,15 +165,18 @@ void CSplitterWndEx::EqualizeRows()
 		GetRowInfo(i, h, hmin);
 		sum += h;
 	}
-	int hEqual = sum/m_nRows;
-	for (i = 0 ; i < m_nRows-1 ; i++)
+	if (sum > 0)
 	{
-		SetRowInfo(i, hEqual, hmin);
-		sum -= hEqual;
-	}
-	SetRowInfo(i, sum, hmin);
+		int hEqual = sum/m_nRows;
+		for (i = 0 ; i < m_nRows-1 ; i++)
+		{
+			SetRowInfo(i, hEqual, hmin);
+			sum -= hEqual;
+		}
+		SetRowInfo(i, sum, hmin);
 
-	RecalcLayout();
+		RecalcLayout();
+	}
 }
 
 void CSplitterWndEx::EqualizeCols() 
@@ -201,9 +210,44 @@ void CSplitterWndEx::EqualizeCols()
 	}
 }
 
+void CSplitterWndEx::RecalcLayout()
+{
+	if (m_nCols == 2 && m_bAutoResizePanes)
+	{
+		CRect vSplitterWndRect;
+		GetWindowRect(vSplitterWndRect);
+		HMONITOR hLeftMonitor = MonitorFromPoint(vSplitterWndRect.TopLeft(), MONITOR_DEFAULTTONEAREST);
+		HMONITOR hRightMonitor = MonitorFromPoint(CPoint(vSplitterWndRect.right, vSplitterWndRect.top), MONITOR_DEFAULTTONEAREST);
 
+		bool bSplitPanesInHalf = true;
+		if (hLeftMonitor != hRightMonitor)
+		{
+			MONITORINFO info;
+			info.cbSize = sizeof(MONITORINFO);
+			GetMonitorInfo(hLeftMonitor, &info);
 
+			int iDesiredWidthOfLeftPane = info.rcMonitor.right - vSplitterWndRect.left;
+			int iDesiredWidthOfRightPane = vSplitterWndRect.right - info.rcMonitor.right;
 
+			if (iDesiredWidthOfLeftPane > 100 && iDesiredWidthOfRightPane > 100)
+			{
+				bSplitPanesInHalf = false;
+				SetColumnInfo(0, iDesiredWidthOfLeftPane, 0);
+				SetColumnInfo(1, iDesiredWidthOfRightPane, 0);
+			}
+		}
+		
+		if (bSplitPanesInHalf)
+		{
+			CRect vSplitterWndRect;
+			GetWindowRect(vSplitterWndRect);
+			SetColumnInfo(0, vSplitterWndRect.Width() / 2, 0);
+			SetColumnInfo(1, vSplitterWndRect.Width() / 2, 0);
+		}
+	}
+
+	CSplitterWnd::RecalcLayout();
+}
 
 void CSplitterWndEx::OnSize(UINT nType, int cx, int cy) 
 {
