@@ -1138,6 +1138,7 @@
 #define ID_TOOLBAR_NONE                 33164
 #define ID_TOOLBAR_SMALL                33165
 #define ID_TOOLBAR_BIG                  33166
+#define ID_VIEW_RESIZE_PANES            33167
 
 // Next default values for new objects
 //
@@ -1145,7 +1146,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_3D_CONTROLS                     1
 #define _APS_NEXT_RESOURCE_VALUE        237
-#define _APS_NEXT_COMMAND_VALUE         33167
+#define _APS_NEXT_COMMAND_VALUE         33168
 #define _APS_NEXT_CONTROL_VALUE         1336
 #define _APS_NEXT_SYMED_VALUE           113
 #endif
